--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,6 @@
 {
-  "name": "buah-in-frontend",
-  "builds": [
-    {
-      "src": "quasar build",
-      "use": "@vercel/static"
-    }
-  ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/App.vue"
-    }
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/" }
   ]
 }
